--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-label": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
